#107235 Add RabbitMQ and related Kubernetes configurations for performance tests
- Introduced RabbitMQ Deployment, Service, and ConfigMap templates in the Kubernetes setup.
- Enabled RabbitMQ readiness and liveness probes with initial configurations.
- Included WireMock mappings for traffic sign API mocking.
- Updated Azure pipelines to include performance test configurations.
- Adjusted POM to add `netty-all` dependency to address netty module issues.